# doc_organizer

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: windows-installer.yml
src/: App.tsx  styles.css  tauri.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
