[package]
name = "private-file-organizer"
version = "0.1.0"
description = "Local-first private photo and document organizer"
authors = ["Private File Organizer"]
edition = "2021"

[lib]
name = "private_file_organizer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
csv = "1.3"
dirs = "5.0"
infer = "0.16"
kamadak-exif = "0.5"
lopdf = "0.34"
quick-xml = "0.36"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tauri = { version = "2.5.0", features = ["protocol-asset"] }
tauri-plugin-dialog = "2.2.2"
thiserror = "1.0"
walkdir = "2.5"
zip = "2.2"

[features]
custom-protocol = ["tauri/custom-protocol"]
